# LVTN

Code/: CMakeLists.txt  sdkconfig  sdkconfig.old
Code/main/: CMakeLists.txt  Kconfig.projbuild  main.c
Code/main/DHT11/: dht11.c  dht11.h
Code/main/IRReceive/: IRReceive.c  IRReceive.h
Code/main/IRSend/: Daikin.c  Daikin.h  IRSend.c  IRSend.h  IRSendRaw.c  IRSendRaw.h
Code/main/Led/: led.c  led.h
Code/main/OV2640/: CRtspSession.h  OV2640.cpp  platglue-esp-idf.h  rtsp_server.cpp  rtsp_server.h  stream_server.c  stream_server.h
Code/main/camera/: camera_driver.c  camera_driver.h  camera_stream.c  camera_stream.h
Code/main/wifi/: app_wifi.c  app_wifi.h  wifi.c  wifi.h
Lib/: README.md  sdkconfig.defaults
Lib/main/: AppTask.cpp  Button.cpp  CMakeLists.txt  Device.cpp  DeviceCallbacks.cpp  Globals.cpp  main.cpp
Lib/main/BUZZER/: piezo_driver.c  piezo_driver.h
Lib/main/EEPROM/: at24c.c  at24c.h
Lib/main/IR/: IRDriver.c  IRDriver.h  IRRecv.c  IRRecv.h  IRSend.c  IRSend.h  IRWidget.c  IRWidget.h
Lib/main/JSON/: JSON.cpp  JSON.h
Lib/main/LED/: LED.cpp  LED.h  ws2812_driver.c  ws2812_driver.h
Lib/main/MQTT/: aws.c  aws.h
Lib/main/NVS/: NVSDriver.c  NVSDriver.h
Lib/main/OTA/: OTA.c  OTA.h
Lib/main/SGM62110/: sgm62110.c  sgm62110.h
Lib/main/SensorExternal/: SensorExternal.cpp  SensorExternal.h  i2cdev.c  i2cdev.h  ltr303.c  ltr303.h  scd40.c  scd40.h  sht40.c  sht40.h
Lib/main/certs/: cert.h  client_prod.crt  client_prod.key  client_stag.crt  client_stag.key
Lib/main/include/: AppTask.h  Button.h  Common.h  Device.h  DeviceCallbacks.h  (+2 more)
